2012-09-26  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am, connector.cc, event_router.cc, multibuffer.cc,
	music/connectivity.hh, music/connector.hh, music/multibuffer.hh,
	music/runtime.hh, music/scheduler.hh, music/subconnector.hh,
	port.cc, runtime.cc, scheduler.cc, subconnector.cc: Implementation
	of multiconnectors.

2012-09-15  Mikael Djurfeldt  <djurfeldt@hambach.cluster>

	* connector.cc (lessOutputSubconnector): Make less condition
	consistent.

2012-09-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* connector.cc (Connector::initialize): Sort input and output
	subconnectors according to different criteria in order to obtain
	the communication schedule described in Mikael Djurfeldt et
	al. (2005) "Massively parallel simulation of brain-scale neuronal
	network models."

	* music/connector.hh (Connector::isInput)
	(InputConnector::isInput): New member function.

	* music/subconnector.hh (Subconnector::localRank): New member
	function.

2012-09-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/clock.hh, clock.cc (Clock::reset): New member function.

2012-09-04  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* scheduler.cc (Scheduler::nextCommunication): Make sure that all
	events from the first point in time are scheduled.

	* music/scheduler.hh (SConnection): Renamed from Connection in
	order not to be confused with connection.hh::Connection.

	* connector.cc (Connector::isProxy): New member function.

	* music/scheduler.hh, scheduler.cc (Scheduler::addConnection): New
	argument multiComm.
	(Scheduler::Connection): New member multiComm.

	* music/temporal.hh, temporal.cc (ConnectionDescriptor): New
	member multiComm.
	(TemporalNegotiator::collectNegotiationData): Set multiComm.
	(TemporalNegotiator::fillScheduler): Pass multiComm to
	Scheduler::addConnection.

2012-09-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* scheduler.cc (Scheduler::initialize): Setup ProxyConnector
	representing a distant connection.
